fix: slight css changes to make images look better and fix user profile endpoint not showing

--- a/assets/global/profile.css
+++ b/assets/global/profile.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   font-family: sans-serif;
-  background: linear-gradient(rgba(65, 100, 201, 0.8), rgba(65, 100, 201, 0.8)),
-    url("https://wallpaperaccess.com/full/487824.jpg");
+  background: linear-gradient(rgba(65, 100, 201, 0.8), rgba(65, 100, 201, 0.8)), url("https://wallpaperaccess.com/full/487824.jpg");
 }
 
 .container {
@@ -47,8 +46,10 @@ body {
 }
 
 .profile-photo {
-  width: 50%;
+  width: 12.5em;
+  height: 12.5em;
   border-radius: 50%;
+  object-fit: cover;
   border: solid 3px white;
 }
 
